# rs-mail-parser

./: .gitignore  Cargo.toml  Dockerfile
src/: configuration.rs  mail_client.rs  main.rs  storage.rs  telemetry.rs  web_parser.rs
src/xlparser/: carpetland.rs  fancy.rs  fenix.rs  fox.rs  mod.rs  opus.rs  ortgraph.rs  vvk.rs  zefir.rs
