[package]
name = "rs-mail-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# mail
async-imap = {version = "0.10.0", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.9.3"
# async
tokio = {version = "1.40.0", features = ["full"]}
futures = "0.3.30"
# serde
serde = {version = "1.0.209", features = ["derive"]}
# errors
anyhow = "1.0.86"
# log
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# config
config = "0.14.0"
# excel
calamine = "0.25.0"
#web parser
tl = "0.7.8"
# requests
reqwest = {version = "0.12.7", features = ["json", "gzip", "cookies"]}
# secrets
secrecy = { version = "0.9.0-pre.0", features = ["serde"] }
