[package]
name = "rs-mail-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
# mail
imap = "3.0.0-alpha.14"
mail-parser = "0.9.3"
# async
tokio = { version = "1.40.0", features = ["rt"] }
rayon = "1.10.0"
# serde
serde = { version = "1.0.210", features = ["derive"] }
# errors
anyhow = "1.0.87"
# log
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# config
config = "0.14.0"
# excel
calamine = "0.25.0"
#web parser
tl = "0.7.8"
# requests
reqwest = { version = "0.12.7", features = [
    "json",
    "gzip",
    "cookies",
    "blocking",
] }
# secrets
secrecy = { version = "0.9.0-pre.0", features = ["serde"] }
# db
surrealdb = "1.5.5"
# helpers
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
[profile.release]
strip = true
lto = true
panic = 'abort'